update payment flow
