# cmd/docs/swagger.yaml
@@ -65,6 +65,27 @@ definitions:
       updated_at:
         type: string
     type: object
+  github_com_rowjay007_event-bookie_internal_models.Payment:
+    properties:
+      amount:
+        type: number
+      booking_id:
+        type: integer
+      created_at:
+        type: string
+      id:
+        type: integer
+      payment_method:
+        type: string
+      status:
+        type: string
+      transaction_id:
+        type: string
+      updated_at:
+        type: string
+      user_id:
+        type: integer
+    type: object
   github_com_rowjay007_event-bookie_internal_models.User:
     properties:
       created_at:
@@ -134,6 +155,7 @@ info:
   license:
     name: MIT
     url: https://opensource.org/licenses/MIT
+  termsOfService: http://swagger.io/terms/
   title: Event Bookie API
   version: "1.0"
 paths:
@@ -728,11 +750,15 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: An object containing organizers and total count
+          schema:
+            $ref: '#/definitions/gin.H'
+        "400":
+          description: Invalid query params
           schema:
             $ref: '#/definitions/gin.H'
         "500":
-          description: Internal Server Error
+          description: Failed to fetch organizers
           schema:
             $ref: '#/definitions/gin.H'
       summary: Retrieve all organizers
@@ -757,11 +783,11 @@ paths:
           schema:
             $ref: '#/definitions/github_com_rowjay007_event-bookie_internal_models.Organizer'
         "400":
-          description: Bad Request
+          description: Organizer information is invalid
           schema:
             $ref: '#/definitions/gin.H'
         "500":
-          description: Internal Server Error
+          description: Failed to create organizer
           schema:
             $ref: '#/definitions/gin.H'
       summary: Create a new organizer
@@ -782,15 +808,15 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: Organizer deleted successfully
           schema:
             $ref: '#/definitions/gin.H'
         "404":
-          description: Not Found
+          description: Organizer not found
           schema:
             $ref: '#/definitions/gin.H'
         "500":
-          description: Internal Server Error
+          description: Failed to delete organizer
           schema:
             $ref: '#/definitions/gin.H'
       summary: Delete an organizer by ID
@@ -814,11 +840,11 @@ paths:
           schema:
             $ref: '#/definitions/github_com_rowjay007_event-bookie_internal_models.Organizer'
         "404":
-          description: Not Found
+          description: Organizer not found
           schema:
             $ref: '#/definitions/gin.H'
         "500":
-          description: Internal Server Error
+          description: Failed to fetch organizer
           schema:
             $ref: '#/definitions/gin.H'
       summary: Retrieve an organizer by ID
@@ -848,20 +874,163 @@ paths:
           schema:
             $ref: '#/definitions/github_com_rowjay007_event-bookie_internal_models.Organizer'
         "400":
-          description: Bad Request
+          description: Invalid request body
           schema:
             $ref: '#/definitions/gin.H'
         "404":
-          description: Not Found
+          description: Organizer not found
           schema:
             $ref: '#/definitions/gin.H'
         "500":
-          description: Internal Server Error
+          description: Failed to update organizer
           schema:
             $ref: '#/definitions/gin.H'
       summary: Update an existing organizer
       tags:
       - Organizers
+  /api/v1/payments:
+    get:
+      description: Get all payments
+      parameters:
+      - description: Offset
+        in: query
+        name: offset
+        type: integer
+      - description: Limit
+        in: query
+        name: limit
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/github_com_rowjay007_event-bookie_internal_models.Payment'
+            type: array
+        "400":
+          description: Invalid offset or limit
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Failed to get payments
+          schema:
+            $ref: '#/definitions/gin.H'
+      summary: Get all payments
+      tags:
+      - payments
+    post:
+      consumes:
+      - application/json
+      description: Create a new payment
+      parameters:
+      - description: Payment information
+        in: body
+        name: payment
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_rowjay007_event-bookie_internal_models.Payment'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/github_com_rowjay007_event-bookie_internal_models.Payment'
+        "400":
+          description: Payment information is invalid
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Failed to create payment
+          schema:
+            $ref: '#/definitions/gin.H'
+      summary: Create a new payment
+      tags:
+      - payments
+  /api/v1/payments/{id}:
+    delete:
+      description: Delete a payment
+      parameters:
+      - description: Payment ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 'message": "Payment deleted successfully'
+          schema:
+            $ref: '#/definitions/gin.H'
+        "400":
+          description: Invalid ID
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Failed to delete payment
+          schema:
+            $ref: '#/definitions/gin.H'
+      summary: Delete a payment
+      tags:
+      - payments
+    get:
+      description: Get a payment by ID
+      parameters:
+      - description: Payment ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_rowjay007_event-bookie_internal_models.Payment'
+        "404":
+          description: Payment not found
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Failed to get payment
+          schema:
+            $ref: '#/definitions/gin.H'
+      summary: Get a payment by ID
+      tags:
+      - payments
+    put:
+      consumes:
+      - application/json
+      description: Update a payment
+      parameters:
+      - description: Updated payment information
+        in: body
+        name: payment
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_rowjay007_event-bookie_internal_models.Payment'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_rowjay007_event-bookie_internal_models.Payment'
+        "400":
+          description: Payment information is invalid
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Failed to update payment
+          schema:
+            $ref: '#/definitions/gin.H'
+      summary: Update a payment
+      tags:
+      - payments
   /api/v1/secured/profile:
     get:
       consumes:
