# internal/handlers/payment.go
@@ -6,11 +6,11 @@ import (
 
     "github.com/gin-gonic/gin"
     "github.com/rowjay007/event-bookie/internal/models"
-	"github.com/rowjay007/event-bookie/internal/service/payment"
+    "github.com/rowjay007/event-bookie/internal/service/payment"
 )
 
 type PaymentHandler struct {
-    PaymentService *service.PaymentService
+    PaymentService *service.PaymentService 
 }
 
 func NewPaymentHandler(paymentService *service.PaymentService) *PaymentHandler {
@@ -25,8 +25,8 @@ func NewPaymentHandler(paymentService *service.PaymentService) *PaymentHandler {
 // @Produce json
 // @Param payment body models.Payment true "Payment information"
 // @Success 201 {object} models.Payment
-// @Failure 400 {object} gin.H 
-// @Failure 500 {object} gin.H 
+// @Failure 400 {object} gin.H "Payment information is invalid"
+// @Failure 500 {object} gin.H "Failed to create payment"
 // @Router /api/v1/payments [post]
 func (ph *PaymentHandler) CreatePayment(c *gin.Context) {
     var payment models.Payment
@@ -41,6 +41,72 @@ func (ph *PaymentHandler) CreatePayment(c *gin.Context) {
     }
 
     c.JSON(http.StatusCreated, payment)
+}
+
+// GetAllPayments godoc
+// @Summary Get all payments
+// @Description Get all payments with optional filtering and sorting
+// @Tags payments
+// @Produce json
+// @Param offset query int false "Offset"
+// @Param limit query int false "Limit"
+// @Param sort query string false "Sort by field"
+// @Param order query string false "Order (asc or desc)"
+// @Param filter query string false "Filter by field:value"
+// @Success 200 {object} gin.H models.Payment
+// @Failure 400 {object} gin.H "Invalid parameters"
+// @Failure 500 {object} gin.H "Failed to get payments"
+// @Router /api/v1/payments [get]
+func (ph *PaymentHandler) GetAllPayments(c *gin.Context) {
+    queryParams := c.Request.URL.Query()
+    offsetStr := queryParams.Get("offset")
+    limitStr := queryParams.Get("limit")
+    sort := queryParams.Get("sort")
+    order := queryParams.Get("order")
+    filter := queryParams.Get("filter")
+
+    var offset, limit int
+    var err error
+
+    if offsetStr != "" {
+        offset, err = strconv.Atoi(offsetStr)
+        if err != nil {
+            c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid offset"})
+            return
+        }
+    } else {
+        offset = -1
+    }
+
+    if limitStr != "" {
+        limit, err = strconv.Atoi(limitStr)
+        if err != nil {
+            c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid limit"})
+            return
+        }
+    } else {
+        limit = -1
+    }
+
+    params := make(map[string]string)
+    for key, values := range queryParams {
+        if len(values) > 0 {
+            params[key] = values[0]
+        }
+    }
+
+    payments, total, err := ph.PaymentService.GetAllPayments(params, offset, limit, sort, order, filter)
+    if err != nil {
+        c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to fetch payments"})
+        return
+    }
+
+    response := gin.H{
+        "payments": payments,
+        "total":    total,
+    }
+
+    c.JSON(http.StatusOK, response)
 }
 
 
@@ -103,7 +169,7 @@ func (ph *PaymentHandler) UpdatePayment(c *gin.Context) {
 // @Tags payments
 // @Produce json
 // @Param id path int true "Payment ID"
-// @Success 200 {object} models.Payment
+// @Success 200 {object} gin.H "message": "Payment deleted successfully"
 // @Failure 400 {object} gin.H "Invalid ID"
 // @Failure 500 {object} gin.H "Failed to delete payment"
 // @Router /api/v1/payments/{id} [delete]
@@ -123,62 +189,3 @@ func (ph *PaymentHandler) DeletePayment(c *gin.Context) {
     c.JSON(http.StatusOK, gin.H{"message": "Payment deleted successfully"})
 }
 
-// GetAllPayments godoc
-// @Summary Get all payments
-// @Description Get all payments
-// @Tags payments
-// @Produce json
-// @Param offset query int false "Offset"
-// @Param limit query int false "Limit"
-// @Success 200 {object} gin.H model.PaymentList
-// @Failure 400 {object} gin.H "Invalid offset or limit"
-// @Failure 500 {object} gin.H "Failed to get payments"
-// @Router /api/v1/payments [get]
-func (ph *PaymentHandler) GetAllPayments(c *gin.Context) {
-    queryParams := c.Request.URL.Query()
-    offsetStr := queryParams.Get("offset")
-    limitStr := queryParams.Get("limit")
-
-    var offset, limit int
-    var err error
-
-    if offsetStr != "" {
-        offset, err = strconv.Atoi(offsetStr)
-        if err != nil {
-            c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid offset"})
-            return
-        }
-    } else {
-        offset = -1
-    }
-
-    if limitStr != "" {
-        limit, err = strconv.Atoi(limitStr)
-        if err != nil {
-            c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid limit"})
-            return
-        }
-    } else {
-        limit = -1
-    }
-
-    params := make(map[string]string)
-    for key, values := range queryParams {
-        if len(values) > 0 {
-            params[key] = values[0]
-        }
-    }
-
-    payments, total, err := ph.PaymentService.GetAllPayments(params, offset, limit)
-    if err != nil {
-        c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to fetch payments"})
-        return
-    }
-
-    response := gin.H{
-        "payments": payments,
-        "total":    total,
-    }
-
-    c.JSON(http.StatusOK, response)
-}
